# fitness_tracker

./: .gitignore  PROJECT_STATUS.md  README.md  docker-compose.yml
client/: Dockerfile  (+2 more)
server/: .env  Dockerfile  database.py  main.py  pyproject.toml  requirements.txt
server/app/: main.py
server/app/api/: api.py
server/app/core/: ai_model.py  config.py  health_integration.py  professional_auth.py  storage.py
server/app/crud/: base.py  certification.py  professional.py  specialization.py
server/app/database/: database.py
server/app/middleware/: professional_auth.py
server/app/models/: __init__.py  achievements.py  client.py  consultation.py  equipment.py  exercise.py  exercise_library.py  gamification.py  health_recovery.py  models.py  nutrition.py  payment.py  performance_metrics.py  professional.py  progress.py  progress_photos.py  progress_tracking.py  scheduling.py  smart_features.py  social.py  user.py  workout.py  workout_planning.py
server/app/routes/: auth.py  exercise_library.py  gamification.py  progress.py  progress_tracking.py  social.py  workout_planning.py  workouts.py
server/app/schemas/: equipment.py  exercise_library.py  health.py  health_recovery.py  nutrition.py  payment.py  professional.py  progress_photos.py  progress_tracking.py  scheduling.py  schemas.py  smart_features.py  smart_scheduling.py  social.py  user.py  workout.py  workout_planning.py
server/app/services/: consultation.py  equipment.py  health.py  matching.py  notification.py  payment.py  scheduling.py  smart_scheduling.py
server/tests/: test_auth.py  test_basic.py
(+95 files in other folders)
